<resources>
    <!-- main activity -->
    <string name="app_name">Baby Blues Monitor</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>

    <!-- Home fragment -->
    <string name="button_checkmymentalhealth">Check my mental health</string>
    <string name="text_remindernotset">Go to Settings to set up your reminder.</string>
    <string name="text_reminderset">Your reminder is set to %s at %s.</string>

    <!-- EPDS Assessment -->
    <string name="epds_assessment_name">Edinburgh Postnatal Depression Scale</string>
    <string name="epds_instructions">As you are pregnant or have recently had a baby, let\'s check
        on how you are feeling. Please check the answer that comes closest to how you have felt IN
        THE PAST 7 DAYS, not just how you feel today.\n\n

        You will need to complete all questions for this assessment.\n\n

        It is very important that you not discuss your answers with anyone.\n\n

        Use the arrow buttons above or swipe the screen to continue.
    </string>
    <string name="epds_inthepastsevendays">In the past 7 days:</string>
    <string name="epds_example_inthepastsevendays">Here is an example, already completed.\n\nIn the
        past 7 days:</string>
    <string name="epds_example_question">I have felt happy</string>
    <string name="epds_example_response0">Yes, all the time</string>
    <string name="epds_example_response1">Yes, most of the time</string>
    <string name="epds_example_response2">No, not very often</string>
    <string name="epds_example_response3">No, not at all</string>
    <string name="epds_example_explanation">This would mean: \"I have felt happy most of the time\"
        during the past week.\n\nPlease complete the other questions in the same way.
    </string>
    <string name="epds_submit_instructions_complete">Tap the button below to complete the
        assessment.
    </string>
    <string name="epds_submit_instructions_incomplete">Respond to all questions to complete the
        assessment.
    </string>
    <string name="epds_score_high">You scored a little high on the depression scale, so it\'s time
        to get some help.\n\n
    </string>
    <string name="epds_score_low">Based on your responses, you are in good health.\n\n
    </string>
    <string name="epds_resources">Women with postpartum depression need not feel alone. They may
        find useful information on the web sites of the Office On Women\'s Health Information Center
        (https://www.womenshealth.gov/mental-health/mental-health-conditions/postpartum-depression)
        and from groups such as Postpartum Support International
        (https://www.postpartum.net/).\n\n

        The OWH operates a helpline to get support over the phone at this number 1-800-944-4773 \n\n

        Help via text is also available in English (1-503-894-9453) and Spanish (1-971-420-0294)\n\n

        The OWH Helpline hours are 9 a.m. — 6 p.m. ET, Monday — Friday\n\n

        The OWH HelpLine does not handle emergencies. People in crisis should call their local
        emergency number or the National Suicide Prevention Hot line at 1-800-273-8255 (TALK).\n\n\n
    </string>

    <!-- EPDS Reminders -->
    <string name="notificationchannel_name_epds_reminder">Reminders</string>
    <string name="notificationchannel_description_epds_reminder">Notifications to remind you to check up on your mental health.</string>
    <string name="reminder_epds_weekly_title">How was your week?</string>
    <string name="reminder_epds_weekly_text">Open the Baby Blues app to check on your mental health</string>

    <!-- Settings -->
    <string name="setting_remindersenabled_title">Enable Reminders</string>
    <string name="setting_remindertime_title">Reminder Time</string>
    <string name="setting_reminderday_title">Reminder Day</string>
    <string name="setting_remindersenabled_summary">Enable weekly reminder to check on your mental health</string>
    <string name="setting_remindertime_summary">Set the time to show the reminder notification</string>
    <string name="setting_reminderday_summary">Set the day to show the reminder notification</string>
    <string name="setting_about_title">About</string>
    <string name="setting_about_summary">View app information</string>
    <string name="setting_about_text">
        IMPORTANT: The Baby Blues Monitor app is available for academic and entertainment purposes
        only, without any warranty or guarantee.\n\n

        The Baby Blues Monitor app is not intended to be a substitute for professional medical care.
        Always seek the advice of your physician or other qualified health provider with any
        questions you may have regarding a medical condition.\n\n

        ----------\n\n

        This app is based on the Edinburgh Postnatal Depression Scale (1).\n\n
        Postpartum depression is the most common complication of childbearing (2). The 10-question Edinburgh
        Postnatal Depression Scale (EPDS) is a valuable and efficient way of identifying patients at risk for \"perinatal\"
        depression. The EPDS is easy to administer and has proven to be an effective screening tool.\n\n
        Mothers who score above 13 are likely to be suffering from a depressive illness of varying severity. The EPDS
        score should not override clinical judgment. A careful clinical assessment should be carried out to confirm the
        diagnosis. The scale indicates how the mother has felt during the previous week. In doubtful cases it may
        be useful to repeat the tool after 2 weeks. The scale will not detect mothers with anxiety neuroses, phobias or
        personality disorders.\n\n
        Sources:\n\n
        (1) Cox, J.L., Holden, J.M., and Sagovsky, R. 1987. Detection of postnatal depression: Development of the 10-item
        Edinburgh Postnatal Depression Scale. British Journal of Psychiatry 150:782-786.\n\n
        (2) K. L. Wisner, B. L. Parry, C. M. Piontek, Postpartum Depression N Engl J Med vol. 347, No 3, July 18, 2002,
        194-199\n\n
    </string>
    <string name="setting_resources_title">Mental Health Resources</string>
    <string name="setting_resources_summary">View resources to help manage your mental health</string>

    <!-- General -->
    <string name="finish">Finish</string>
    <string name="share_results">Share Results</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="ok">OK</string>
    <string name="empty" />
    <string name="get_help">Get Help</string>
</resources>
