<!-- fragment_edps_question_pagee.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false" >

    <TextView
        android:id="@+id/textView"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/epds_inthepastsevendays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/epds_question"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/epds_example_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/epds_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epds_question">

        <RadioButton
            android:id="@+id/epds_response0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/epds_example_response0" />

        <RadioButton
            android:id="@+id/epds_response1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/epds_example_response1" />

        <RadioButton
            android:id="@+id/epds_response2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/epds_example_response2" />

        <RadioButton
            android:id="@+id/epds_response3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/epds_example_response3" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>